force-app/main/default/objects/Product_Availability__c/Product_Availability__c.object-meta.xml
<CustomObject>
    <label>Product Availability</label>
    <pluralLabel>Product Availabilities</pluralLabel>
    <description>Product Availability</description>
    <nameField>
        <label>Product Availability Name</label>
        <type>AutoNumber</type>
        <displayFormat>PAV-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>