force-app/main/default/objects/Product_Availability__c/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <label>In Stock</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>In Stock</description>
</CustomField>