force-app/main/default/objects/Product_Availability__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Availability</relationshipLabel>
    <relationshipName>Product_Availability_Rows</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
</CustomField>