force-app/main/default/objects/Product_Availability__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Quantity</description>
</CustomField>