force-app/main/default/objects/Product_Availability__c/fields/Sales_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Visit__c</fullName>
    <label>Sales Visit</label>
    <type>Lookup</type>
    <referenceTo>Sales_Visit__c</referenceTo>
    <relationshipLabel>Availability</relationshipLabel>
    <relationshipName>Product_Availability</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Visit</description>
</CustomField>